--- a/htc/src/app/app.component.html
+++ b/htc/src/app/app.component.html
@@ -51,9 +51,9 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right dropdown-default"
                aria-labelledby="navbarDropdownMenuLink-333">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item"(click)="dnHref('profile')" translate>profile.myProfile</a>
+            <hr/>
+            <a class="dropdown-item"  translate>profile.exit</a>
           </div>
         </li>
       </ul>
