--- a/htc/src/app/app.component.html
+++ b/htc/src/app/app.component.html
@@ -73,7 +73,7 @@
     </li>
     <li class="nav-item">
       <a (click)="dnHref('claims')" class="nav-link">
-        <span translate>сlaim.title</span>
+        <span translate>claim.title</span>
       </a>
     </li>
     <li class="nav-item">
