--- a/htc/src/styles.scss
+++ b/htc/src/styles.scss
@@ -3,6 +3,11 @@ body {
   font-family: 'Cuprum', sans-serif!important;
 }
 
+.navbar {
+  font-weight: bolder;
+  font-size: 18px;
+}
+
 .btn-circle.btn-xl {
   width: 70px!important;
   height: 70px!important;;
