--- a/htc/src/app/claims/claims.component.html
+++ b/htc/src/app/claims/claims.component.html
@@ -69,7 +69,7 @@
                   mdbWavesEffect>
             <span class="fa fa-search" translate> search</span>
           </button>
-          <button type="button" class="btn btn-sm btn-link" style="width: 200px;float: right" translate>
+          <button type="button" class="btn btn-sm btn-link" (click)="clearForm()" style="width: 200px;float: right" translate>
             clear
           </button>
         </div>
@@ -184,7 +184,7 @@
             <!--            </tr>-->
             <!--            </tbody>-->
           </table>
-          <div class="position-static" style="z-index: 99999999999999999999; float: right">
+          <div class="position-static createClaimBtn">
             <button type="button" class="btn btn-success btn-circle btn-xl" (click)="dnHref('create-claim')"><i
               class="fa fa-plus"></i>
             </button>
