--- a/htc/src/app/claims/create-claim/create-claim.component.html
+++ b/htc/src/app/claims/create-claim/create-claim.component.html
@@ -1,7 +1,8 @@
 <div class="card-body">
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" id="fillClaims-tab" data-toggle="tab" href="#fillClaims" role="tab" aria-controls="fillClaims"
+      <a class="nav-link active" id="fillClaims-tab" data-toggle="tab" href="#fillClaims" role="tab"
+         aria-controls="fillClaims"
          aria-selected="true" translate> claim.title</a>
     </li>
     <li class="nav-item">
@@ -9,7 +10,8 @@
          aria-selected="false" translate>claim.contractOU</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" id="impressions-tab" data-toggle="tab" href="#impressions" role="tab" aria-controls="impressions"
+      <a class="nav-link" id="impressions-tab" data-toggle="tab" href="#impressions" role="tab"
+         aria-controls="impressions"
          aria-selected="false" translate>claim.impressions</a>
     </li>
     <li class="nav-item">
@@ -19,7 +21,56 @@
   </ul>
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="fillClaims" role="tabpanel" aria-labelledby="fillClaims-tab">
-      1
+      <div class="card-body">
+        <div class="row">
+          <div class="col-sm">
+            <div class="accordion" id="accordionaboutDeal">
+              <div class="card z-depth-0 bordered">
+                <div class="card-header" id="aboutDeal">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseaboutDeal"
+                            aria-expanded="true" aria-controls="collapseaboutDeal" translate>
+                      claim.aboutDeal
+                    </button>
+                  </h5>
+                </div>
+                <div id="collapseaboutDeal" class="collapse show" aria-labelledby="headingOne"
+                     data-parent="#accordionaboutDeal">
+                  <div class="card-body">
+                    labore sustainable.1a
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="accordion" id="accordionaboutOwnerOne">
+              <div class="card z-depth-0 bordered">
+                <div class="card-header" id="headingOne">
+                  <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#aboutOwnerOne"
+                            aria-expanded="true" aria-controls="aboutOwnerOne" translate>
+                      claim.aboutOwner
+                    </button>
+                  </h5>
+                </div>
+                <div id="aboutOwnerOne" class="collapse show" aria-labelledby="headingOne"
+                     data-parent="#accordionaboutOwnerOne">
+                  <div class="card-body">
+                    labore sustainable.1a
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm">
+
+          </div>
+        </div>
+      </div>
     </div>
     <div class="tab-pane fade" id="contractOU" role="tabpanel" aria-labelledby="contractOU-tab">
       2
