--- a/htc/src/app/claims/claims.component.html
+++ b/htc/src/app/claims/claims.component.html
@@ -8,10 +8,8 @@
           <label class="control-labels" translate>claim.claimType</label>
           <div class="row">
             <div class="col-sm">
-              <ng-select [allowClear]="true"
-                         [(ngModel)]="formData.claimType"
+              <ng-select
                          class="form-control"
-                         [options]="dClaimType"
                          placeholder="{{ 'patterns.chooseElement' | translate }}">
               </ng-select>
             </div>
