--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -67,7 +67,7 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" (click)="dnHref('panel')">
+      <a class="nav-link" (click)="dnHref('board')">
         <span translate>controlPanels.title</span>
       </a>
     </li>
